# Chisaka

./: .gitignore  GNUmakefile  README.md  compile_commands.json  disk.img
clangd_gen/: CMakeLists.txt  README.md  main.cpp
kernel/: .gitignore  GNUmakefile  compile_integration_tests.sh  linker.ld  output.map
kernel/ext/: readme.md
kernel/include/: kostream.hpp  logger.hpp  string.h
kernel/integration_tests/: .gitignore  build_run_all_test.sh  build_run_test1.sh  compile_integration_tests.sh  make_run_test.sh  make_test.sh  make_test1.sh  read_to_array.sh  refresh.sh  run_test.sh  run_test1.sh
kernel/src/: .gitignore  ascii.hpp  coms.S  config.hpp  debug.hpp  gdt.cpp  gdt.hpp  ioports.S  kassert.hpp  kcontext.cpp  kcontext.hpp  kmalloc.hpp  limine_services.cpp  limine_services.hpp  main.cpp  memory.hpp  memory_list.cpp  memory_list.hpp  palloc.hpp  serial.S  string.cpp  string.h  tyes.txt  types.hpp  yay.cpp
kernel/src/aii/: array.hpp  default_delete.hpp  error.hpp  expected.hpp  math.hpp  optional.hpp  rbtree.hpp  readme.md  string.h  stubs.hpp  unique_ptr.hpp
kernel/src/concepts/: allocator.hpp  kglobal.hpp  memory_map.hpp
kernel/src/cpu/: features.S  features.cpp  features.hpp  idt.cpp  idt.hpp  utilites.hpp
kernel/src/drivers/: ataio.cpp  ataio.hpp
kernel/src/entry_points/: hanging.cpp  main.cpp  test1.cpp  test2.cpp
kernel/src/grains/: grains.hpp  readme.md
kernel/src/include/: kassert.hpp
kernel/src/integration_tests/: TEMPLATE.cpp
kernel/src/io/: ataio.hpp  pci.hpp
kernel/unit_tests/: .gitignore
notes/: RESOURCES.md  TODO.md
(+430 files in other folders)
